--- a/Atividade02/app/src/main/res/layout/activity_principal.xml
+++ b/Atividade02/app/src/main/res/layout/activity_principal.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="139dp"
-        android:layout_weight="0"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
@@ -72,13 +72,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0"
+        android:layout_weight="7"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:foreground="#001E2C"
             android:text="TextView" />
@@ -86,7 +86,7 @@
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:foreground="#FFFFFF"
             android:text="TextView" />
@@ -94,7 +94,7 @@
         <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:foreground="#1D1736"
             android:text="TextView" />
@@ -102,7 +102,7 @@
         <TextView
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="10"
             android:foreground="#000000"
             android:text="TextView" />
